xStream 3.5.11~nightly
- [filmpalast_to] add vivo support
- [streamking] wieder hinzugefügt
- [cinemaxx.cc] Blazingfast problem entfernt
- [foxx.to] offline
- [movietown.org] cloudflare problem entfernt
- [mykino.to] fast alle links offline
- [streamking.eu] offline
- [KKiste.co] Add supervideo support
- [topstreamfilm] add description and duration usw
- [KKiste.co] Add site
- [MovieStream] fix such filter
- [hdfilme] fix movie hoster and episodes tnx Ahnz
- [Kinoger] add hoster newcloud aka fsst.online

xStream 3.5.10
  09.09.2019
- [hd-streams.to] Fix
- [kinoger.com] fix hoster add description and duration
- [filmpalast] add partially year and duration
- [foxx] add duration
- [hd-streams.to] add site
- [hd-streams.org] fix suche usw.
- [foxx] fix suche
- [alleserien] fix suche
- [s.to] fix hoster Qualy
- [moviedream] fix hoster tnx kasimodo
- [alleserien] fix hoster
- [kinox] update domains
- [Foxx] Fix Regex
- [topstreamfilm] Fix Hoster
- [Update Manager] Resolver nightly Pfad erneuert

xStream 3.5.9
  21.07.2019
- [kinox] update domains
- [Foxx] Fix Regex
- [topstreamfilm] Fix Hoster
- [moviedream] fix nexpage problem
- [s.to] Fix Thumbnail
- [cinemaxx.cc] Fix Episodes
- fix Blazingfast
- [moviedream] fix Serien
- [freikino] add site

xStream 3.5.8
  09.07.2019
- [DirectDownLoad] fix Description
- [kinox.one] remove offline site
- [movie2k.sh] remove offline site
- [movies.gg] remove offline site
- [cinenator] fix regex
- [Topstreamfilm] fix suche usw.
- [Streamking] fix genre
- [Moviestream] neu geschieben
- [HDfilme] Fix Site
- [cinemaxx] fix regex and episode description
- [HDKino.to] remove offline site
- [onlinefilme.to] remove offline site
- [hdstreamfilme] add site
- [filmpalast] fix hoster
- [foxx] fix hoster
- [hdfilme] Fix Episodes
- [Foxx] fix Hoster and Search
- [streamit.ws] fix

xStream 3.5.7
  04.05.2019
- [filmpalast] fix hoster
- [kinoger] fix hoster
- [topstreamfilm] add site
- [kinox] add support Thumbnails and code cleanup