@@ -23,6 +23,7 @@
     <string id="30021">Site-Plugins</string>
     <string id="30022">Views</string>
     <string id="30023">Downloads</string>
+    <string id="30024">Accounts</string>
 
     <!-- settingsheader begin by 30030 - 30039 -->
     <string id="30030">Update</string>
