@@ -35,10 +35,6 @@
     <setting default="true" id="plugin_animes-stream24_tv" label="30050" type="bool" />
     <setting default="false" enable="!eq(-1,false)" id="global_search_animes-stream24_tv" label="30052" type="bool" />
     <setting type="sep" />
-    <setting label="Cinemaxx" type="lsep" />
-    <setting default="true" id="plugin_cinemaxx_cc" label="30050" type="bool" />
-    <setting default="true" enable="!eq(-1,false)" id="global_search_cinemaxx_cc" label="30052" type="bool" />
-    <setting type="sep" />
     <setting label="Cinenator" type="lsep" />
     <setting default="true" id="plugin_cinenator" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_cinenator" label="30052" type="bool" />
@@ -60,10 +56,6 @@
     <setting default="true" id="plugin_flimmerstube_com" label="30050" type="bool" />
     <setting default="false" enable="!eq(-1,false)" id="global_search_flimmerstube_com" label="30052" type="bool" />
     <setting type="sep" />
-    <setting label="Foxx" type="lsep" />
-    <setting default="true" id="plugin_foxx_to" label="30050" type="bool" />
-    <setting default="true" enable="!eq(-1,false)" id="global_search_foxx_to" label="30052" type="bool" />
-    <setting type="sep" />
     <setting label="FreiKino" type="lsep" />
     <setting default="true" id="plugin_freikino" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_freikino" label="30052" type="bool" />
@@ -71,6 +63,10 @@
     <setting label="HD-Streams" type="lsep" />
     <setting default="true" id="plugin_hd-streams_org" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_hd-streams_org" label="30052" type="bool" />
+    <setting type="sep" />
+    <setting label="hd-streams.to" type="lsep" />
+    <setting default="true" id="plugin_hd-streams_to" label="30050" type="bool" />
+    <setting default="true" enable="!eq(-1,false)" id="global_search_hd-streams_to" label="30052" type="bool" />
     <setting type="sep" />
     <setting label="HDfilme" type="lsep" />
     <setting default="true" id="plugin_hdfilme" label="30050" type="bool" />
@@ -101,6 +97,10 @@
     <setting default="true" enable="!eq(-1,false)" id="global_search_kinox_to" label="30052" type="bool" />
     <setting default="kinoz.to" enable="!eq(-2,false)" id="kinox_to-domain" label="30051" type="labelenum" values="kinox.am|kinoz.to|kinos.to|kinox.mobi|kinox.gratis|kinox.space|kinox.party|kinox.express|kinox.pub|kinox.direct|kinox.digital|kinox.club|kinox.click|kinox.ai|kinox.cloud|kinox.fyi|kinox.fun|kinox.wtf|kinox.lol|kinox.sh|kinox.to" />
     <setting type="sep" />
+    <setting label="KKiste.co" type="lsep" />
+    <setting default="true" id="plugin_kkiste_co" label="30050" type="bool" />
+    <setting default="true" enable="!eq(-1,false)" id="global_search_kkiste_co" label="30052" type="bool" />
+    <setting type="sep" />
     <setting label="Movie4k" type="lsep" />
     <setting default="true" id="plugin_movie4k_to" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_movie4k_to" label="30052" type="bool" />
@@ -114,14 +114,6 @@
     <setting default="true" id="plugin_moviestream" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_moviestream" label="30052" type="bool" />
     <setting type="sep" />
-    <setting label="MovieTown" type="lsep" />
-    <setting default="true" id="plugin_movietown_org" label="30050" type="bool" />
-    <setting default="true" enable="!eq(-1,false)" id="global_search_movietown_org" label="30052" type="bool" />
-    <setting type="sep" />
-    <setting label="MyKino" type="lsep" />
-    <setting default="true" id="plugin_mykino_to" label="30050" type="bool" />
-    <setting default="true" enable="!eq(-1,false)" id="global_search_mykino_to" label="30052" type="bool" />
-    <setting type="sep" />
     <setting label="NetzKino" type="lsep" />
     <setting default="true" id="plugin_netzkino_de" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_netzkino_de" label="30052" type="bool" />
@@ -129,16 +121,14 @@
     <setting label="SerienStream" type="lsep" />
     <setting default="true" id="plugin_serienstream_to" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_serienstream_to" label="30052" type="bool" />
-    <setting default="" id="serienstream.user" label="30083" type="text" />
-    <setting default="" id="serienstream.pass" label="30084" option="hidden" type="text" />
     <setting type="sep" />
     <setting label="StreamIt" type="lsep" />
     <setting default="true" id="plugin_streamit_ws" label="30050" type="bool" />
     <setting default="true" enable="!eq(-1,false)" id="global_search_streamit_ws" label="30052" type="bool" />
     <setting type="sep" />
     <setting label="Streamking" type="lsep" />
-    <setting default="true" id="plugin_streamking_eu" label="30050" type="bool" />
-    <setting default="true" enable="!eq(-1,false)" id="global_search_streamking_eu" label="30052" type="bool" />
+    <setting default="true" id="plugin_streamking" label="30050" type="bool" />
+    <setting default="true" enable="!eq(-1,false)" id="global_search_streamking" label="30052" type="bool" />
     <setting type="sep" />
     <setting label="Topstreamfilm" type="lsep" />
     <setting default="true" id="plugin_topstreamfilm" label="30050" type="bool" />
@@ -173,5 +163,11 @@
     <setting default="8000" enable="!eq(-2,false)" id="pyload_port" label="30073" type="number" />
     <setting default="user" enable="!eq(-3,false)" id="pyload_user" label="30083" type="text" />
     <setting default="" enable="!eq(-4,false)" id="pyload_passwd" label="30084" option="hidden" type="text" />
+  </category> 
+     <category label="30024">
+    <setting label="SerienStream" type="lsep" />
+    <setting default="" id="serienstream.user" label="30083" type="text" />
+    <setting default="" id="serienstream.pass" label="30084" option="hidden" type="text" />
+    <setting type="sep" />
   </category> 
 </settings>
