@@ -1,4 +1,5 @@
 xStream 3.5.11~nightly
+- Update settings.xml und Language strings
 - [filmpalast_to] add vivo support
 - [streamking] wieder hinzugefügt
 - [cinemaxx.cc] Blazingfast problem entfernt
